#912 Fixes alignment bugs

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -771,11 +771,15 @@ Disabled tag color (50% opacity): rgba(0,50,83, 0.5);*/
               display: inline-block;
             }
 
+            .list__subblock--w85 {
+              width: 80%;
+              margin-left: 0.5rem;
+              padding-top: 0.5rem;
+            }
+
             @media (min-width: 600px) {
               .list__subblock--w85 {
                 width: 85%;
-                margin-left: 0.5rem;
-                padding-top: 0.5rem;
               }
             }
 
@@ -2494,6 +2498,12 @@ Disabled tag color (50% opacity): rgba(0,50,83, 0.5);*/
   padding-top: 0;
 }
 
+@media (max-width: 600px) {
+  .pt0-s {
+    padding-top: 0;
+  }
+}
+
 @media (min-width: 600px) {
   .pt0-ns {
     padding-top: 0;
@@ -2568,6 +2578,7 @@ Disabled tag color (50% opacity): rgba(0,50,83, 0.5);*/
   font-weight: bold;
 }
 
+/* On the organisation view page*/
 .card--people-mobile {
   padding: 0.5rem 0 0.5rem 1rem;
   text-align: left;
